# inhouse-operations-pytest

./: .black  .flake8  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: TestnRun  Workflow_Test.yml  black.yml  build.yml  flake8.yml  lint.yml  test.yml
PyTest/sort_tests/: test_BubbleSort.py  test_InsertionSort.py  test_QuickSort.py
sort_lib/: int_sort.py
source/: BubbleSort.py  InsertionSort.py  QuickSort.py  test_sortTests.py
test/: test_randomSortTests.py  test_sortTests.py
