[metadata]
name = sort_lib
version = 0.0.1
author = In-House Operations
author_email = samuel.morse@maine.edu
description = An exercise in the capstone course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ForrestSwift/inhouse-operations-pytest
project_urls =
    Bug Tracker = https://github.com/ForrestSwift/inhouse-operations-pytest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = sort_lib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sort_lib
